// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.emotion-2[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.emotion-2:hover,
.emotion-2:focus {
  color: #b2b6c3;
  border-color: #4f0599;
}

.emotion-2:hover {
  box-shadow: 0 0 8px 2px #eeeeff;
}

.emotion-2:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-0 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    class="sui-box emotion-2 emotion-3"
    for="radio-choice"
    variant="default"
  >
    Choice
    <input
      aria-checked="false"
      class="emotion-0 emotion-1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: absolute;
  opacity: 0.01;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #d4dae7;
  pointer-events: none;
}

.emotion-2[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

<label
    aria-checked="false"
    class="sui-box emotion-2 emotion-3"
    disabled=""
    for="radio-choice"
    variant="default"
  >
    Choice
    <input
      aria-checked="false"
      class="emotion-0 emotion-1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with complex child 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: absolute;
  opacity: 0.01;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #d4dae7;
  pointer-events: none;
}

.emotion-2[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

<label
    aria-checked="true"
    class="sui-box emotion-2 emotion-3"
    disabled=""
    for="radio-choice"
    variant="default"
  >
    true true
    <input
      aria-checked="true"
      checked=""
      class="emotion-0 emotion-1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with variant segment 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: absolute;
  opacity: 0.01;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
}

.emotion-2[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.emotion-2:hover,
.emotion-2:focus {
  color: #b2b6c3;
  border-color: #4f0599;
}

.emotion-2:hover {
  box-shadow: 0 0 8px 2px #eeeeff;
}

.emotion-2:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-2:hover,
.emotion-2:focus {
  box-shadow: none;
  border: none;
  color: #4a4f62;
}

.emotion-2[aria-checked='true'] {
  background-color: #4f0599;
  color: #fff;
}

.emotion-2[aria-checked='true']:hover {
  color: #fff;
}

.emotion-2[aria-checked='false'] {
  background-color: white;
  color: #4a4f62;
  border-color: transparent;
}

.emotion-2[aria-checked='false']:hover,
.emotion-2[aria-checked='false']:focus {
  color: #4a4f62;
  border: none;
  box-shadow: none;
}

<label
    aria-checked="false"
    class="sui-box emotion-2 emotion-3"
    for="radio-choice"
    variant="segment"
  >
    Choice
    <input
      aria-checked="false"
      class="emotion-0 emotion-1"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;
